--- a/Third lab.ioc
+++ b/Third lab.ioc
@@ -7,7 +7,7 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM1
+Mcu.IP3=TIM2
 Mcu.IP4=TIM6
 Mcu.IP5=USART6
 Mcu.IPNb=6
@@ -17,10 +17,10 @@ Mcu.Pin0=PC15/OSC32_OUT
 Mcu.Pin1=PH0/OSC_IN
 Mcu.Pin10=PA14
 Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin13=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PH1/OSC_OUT
-Mcu.Pin3=PE9
+Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PD13
 Mcu.Pin5=PD14
 Mcu.Pin6=PD15
@@ -43,7 +43,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -85,13 +84,13 @@ PD15.GPIO_Pull=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Signal=GPIO_Output
-PE9.GPIOParameters=GPIO_Pull,GPIO_Mode,GPIO_Speed
-PE9.GPIO_Mode=GPIO_MODE_AF_PP
-PE9.GPIO_Pull=GPIO_NOPULL
-PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PE9.Locked=true
-PE9.Mode=PWM Generation 1
-PE9.Signal=TIM1_CH1
+PA0-WKUP.GPIOParameters=GPIO_Pull,GPIO_Mode,GPIO_Speed
+PA0-WKUP.GPIO_Mode=GPIO_MODE_AF_PP
+PA0-WKUP.GPIO_Pull=GPIO_NOPULL
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA0-WKUP.Locked=true
+PA0-WKUP.Mode=PWM Generation CH1
+PA0-WKUP.Signal=TIM2_CH1
 PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
@@ -126,7 +125,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -165,25 +164,20 @@ RCC.VCOSAIOutputFreq_Value=81666666.66666667
 RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
-SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation CH1
+SH.S_TIM2_CH1.ConfNb=1
 
-# КРИТИЧЕСКОЕ ИСПРАВЛЕНИЕ: AutoReloadPreload должен быть ENABLE
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM1.CounterMode=TIM_COUNTERMODE_UP
-TIM1.IPParameters=Prescaler,Period,ClockDivision,CounterMode,RepetitionCounter,AutoReloadPreload,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,OCPolarity,OCNPolarity,OCFastMode,OCIdleState,OCNIdleState
-TIM1.OCIdleState=TIM_OCIDLESTATE_RESET
-TIM1.OCNPolarity=TIM_OCNPOLARITY_HIGH
-TIM1.OCNIdleState=TIM_OCNIDLESTATE_RESET
-TIM1.OCPolarity=TIM_OCPOLARITY_HIGH
-TIM1.OCFastMode=TIM_OCFAST_DISABLE
-# Увеличиваем Period для работы с частотами нот
-TIM1.Period=65535
-TIM1.Prescaler=89
-TIM1.Pulse-PWM\ Generation1\ CH1=0
-TIM1.RepetitionCounter=0
+# PWM на PA0 (TIM2_CH1)
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation\ CH1=TIM_CHANNEL_1
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.CounterMode=TIM_COUNTERMODE_UP
+TIM2.IPParameters=Prescaler,Period,ClockDivision,CounterMode,AutoReloadPreload,Channel-PWM Generation CH1,Pulse-PWM Generation CH1,OCPolarity,OCFastMode
+TIM2.OCFastMode=TIM_OCFAST_DISABLE
+TIM2.OCPolarity=TIM_OCPOLARITY_HIGH
+TIM2.Period=999
+TIM2.Prescaler=44
+TIM2.Pulse-PWM\ Generation\ CH1=0
 
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.ClockDivision=TIM_CLOCKDIVISION_DIV1
@@ -203,8 +197,8 @@ USART6.WordLength=USART_WORDLENGTH_8B
 
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 
